UTS-1117 Fix auto scrollbar behaviour so that scrollbars don't get cropped.

--- a/groupStatus.css
+++ b/groupStatus.css
@@ -11,12 +11,20 @@ html {
 	font-size: 9px;
 	color: #565E6C;
 	background-color: #ffffff;
+	margin: 0px;
+	overflow: auto !important;
 }
 
-#widgetSettings,#widgetChart {
-	overflow-x: hidden;
-	overflow-y: auto;
+body {
+	width: 100%;
+	margin: 0px;
+	overflow: auto !important;
 }
+
+/*
+#widgetSettings,#widgetChart {
+}
+*/
 
 #statusBar {
 	position: absolute;
